# smpl-hoi

./: .gitignore  pyproject.toml  scene.py
data/: checkpoint_final.pt  sub12_largebox_000.pkl  sub12_largebox_000_replay.pkl
scripts/: asset_loading.py  data_replay.py
smpl_hoi/: __init__.py  asset.py  command.py  motionlib.py  observation.py  reward.py  smpl_hoi_asset.py  smpl_hoi_command.py  termination.py  utils.py
smpl_hoi/assets/: clothesstand.usda  omomo_smplh.usda
smpl_hoi/assets/objects/: monitor.usd
smpl_hoi/assets/objects/largebox/: largebox.urdf  largebox.usd
smpl_hoi/assets/objects/plasticbox/: plasticbox.usd
smpl_hoi/assets/objects/smalltable/: smalltable.urdf  smalltable.usd
smpl_hoi/assets/objects/trashcan/: trashcan.usd
smpl_hoi/assets/smplh/: sub12.usda  sub12.xml
smpl_hoi/task/smpl/: HOI.yaml  hoi.yaml
